name:                myblog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bsaintjo/myblog#readme
license:             BSD3
license-file:        LICENSE
author:              Brandon Saint-John
maintainer:          bsaintjo@ucsc.edu
copyright:           Copyright (c) 2022 Brandon Saint-John
category:            blog
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable myblog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
